# ABC-EqF

./: .gitignore  LICENSE  README  README.md
docker/: Dockerfile
examples/: simulation.py
filter/: EqF.py
symmetry/: symmetry.py
system/: system.py
unit_test/: test_symmetry.py  test_system.py
utils/: utils.py
wrappers/ROS/src/ABC_EqF/: CMakeLists.txt  package.xml
wrappers/ROS/src/ABC_EqF/launch/: ABC_EqF.launch  ABC_EqF_inertial.launch  ABC_EqF_node.launch
wrappers/ROS/src/ABC_EqF/nodes/: ABC_EqF_inertial_node.py  ABC_EqF_node.py
