<?xml version="1.0"?>
<package format="2">
  <name>ABC_EqF</name>
  <version>1.0.0</version>
  <description>The ABC EqF package</description>

  <author email="alessandro.fornasier@ieee.org">Alessandro Fornasier</author>
  <maintainer email="alessandro.fornasier@ieee.org">Alessandro Fornasier</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/aau-cns/ABC-EqF</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
